mudança de imgs e valores

--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ section{
     height: 40px;
     margin: 5px auto;
 }
-.eua{
+.convert-img{
     width: 40px;
     height: 40px;
     margin: 5px auto;
